feat: Enhance UserService with public profile retrieval and improved error handling
- Added `getPublicProfile` method to retrieve public profiles of users.
- Replaced `IllegalArgumentException` with `AppException` for better error handling in `updateAvatar`, `setPassword`, and other methods.
- Updated error messages to use `ErrorCode` for consistency.

feat: Improve UserTeachingSkillService with better validation and error handling

- Enhanced validation in `create` method to throw `AppException` for missing fields.
- Updated error handling for permission checks in `delete`, `update`, and `changeSkill` methods.

chore: Update application configuration for production and local environments

- Added Redis and Kafka configurations for production in `application-pro.yaml`.
- Created local configuration in `application-local.yml` for easier development.
- Introduced Docker support with Dockerfiles and .dockerignore files for both skill_be and skillsync-notification services.

feat: Implement AdminMissionController for mission management

- Added `AdminMissionController` to manage missions with endpoints for listing and toggling mission status.
- Integrated mission statistics such as completions and unique users.

fix: Add health check endpoint for application status monitoring

- Implemented `HealthController` with a simple health check endpoint.

chore: Add CA certificate for Aiven Kafka connection

- Included `ca.pem` for secure Kafka connections in the notification service.